Liquibase, testcontainers and some tests