@@ -10,9 +10,11 @@ plugins {
 group = "ru.kvader"
 version = "0.0.1-SNAPSHOT"
 
+val mockitoAgent = configurations.create("mockitoAgent")
+
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(25)
+        languageVersion = JavaLanguageVersion.of(24)
     }
     sourceCompatibility = JavaVersion.VERSION_24
     targetCompatibility = JavaVersion.VERSION_24
@@ -28,14 +30,24 @@ dependencies {
     implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
     implementation("org.jetbrains.kotlin:kotlin-reflect")
     implementation("io.micrometer:micrometer-registry-prometheus")
+    implementation("org.liquibase:liquibase-core")
+    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+    implementation("org.postgresql:postgresql")
+    implementation("com.vladmihalcea:hibernate-types-60:2.21.1")
+    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")
     testImplementation("org.springframework.boot:spring-boot-starter-test")
     testImplementation("org.jetbrains.kotlin:kotlin-test-junit5")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
+    testImplementation(libs.mockito.core)
+    testImplementation("org.testcontainers:junit-jupiter")
+    testImplementation("org.testcontainers:postgresql")
+    testImplementation("org.springframework.boot:spring-boot-testcontainers")
+    mockitoAgent("net.bytebuddy:byte-buddy-agent:1.18.1")
 }
 
 kotlin {
     jvmToolchain {
-        languageVersion = JavaLanguageVersion.of(25)
+        languageVersion = JavaLanguageVersion.of(24)
     }
     compilerOptions {
         jvmTarget = JvmTarget.JVM_24
@@ -50,5 +62,10 @@ tasks {
     }
     test {
         useJUnitPlatform()
+        val agentFile = mockitoAgent.singleFile
+        jvmArgs(
+            "-XX:+EnableDynamicAgentLoading",
+            "-javaagent:${agentFile.absolutePath}"
+        )
     }
 }
